opam-version: "2.0"
maintainer: [ "Jason Gross <jgross@mit.edu>" "Ali Caglayan <alizter@gmail.com>" ]
homepage: "http://homotopytypetheory.org/"
bug-reports: "https://github.com/HoTT/HoTT/issues"
license: "BSD-2-Clause"
build: [
  [make "-j%{jobs}%"]
]
install: [make "install"]
depends: [
  "coq" {>= "8.13.2"}
]
authors: ["The HoTT Library Development Team"]
dev-repo: "git+https://github.com/HoTT/HoTT.git"
synopsis: "The Homotopy Type Theory library"
description: """
To use the HoTT library, the following flags must be passed to coqc:
  -noinit -indices-matter
To use the HoTT library in a project, add the following to _CoqProject:
  -arg -noinit
  -arg -indices-matter
"""
tags: [ "logpath:HoTT" ]
url {
  src: "git+https://github.com/HoTT/HoTT.git#master"
}
