(include_subdirs qualified) ; Tell dune to look through subdirectories
(dirs :standard theories contrib)

(coq.theory
  (name HoTT)
  (synopsis "The HoTT Coq library")
  (libraries coq-core.plugins.ltac)
  (flags
    -noinit	         ; Don't load standard library
    -indices-matter  ; Universe levels of index types in inductive types are used to calculate universe level 
    -color on))	     ; Allow color printing (good for errors)

; Doesn't really work atm
(rule (alias _CoqProject)
  (deps ./etc/generate_coqproject.sh)
  (action (bash ./etc/generate_coqproject.sh))
)

;; Rule for validation -- For dune 3.0
;;(rule (alias validate)
;;  (deps (glob_files_rec ./*.vo))
;;  (action (run coqchk -R . HoTT %{deps} -o))
;;)
