; Tell dune to look through subdirectories

(include_subdirs qualified)

; Main theory stanza telling dune how the HoTT library is compiled

(coq.theory
 (name HoTT)
 (package coq-hott)
 (modules :standard)
 (flags -noinit -indices-matter -color on))

; On the dev profile, we want to use the -w +all flag to make sure
; that all warnings are fatal. 

(env
 (dev
  (coq
   (flags -w +all))))
